--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "smart-grid": "^2.0.1"
   },
   "dependencies": {
+    "handlebars": "^4.0.11",
     "jquery-mask-plugin": "^1.14.13",
     "jquery-touchswipe": "^1.6.18"
   }
